# pixelwise-research

./: .bazelignore  .bazelrc  .containerignore  .dockerignore  .envrc  .gitlab-ci.yml  BUILD.bazel  Caddyfile  Dockerfile  LICENSE  MODULE.bazel  README.md  flake.nix  justfile  mdsvex.config.js  package.json  playwright.a11y-hydration.config.ts  playwright.accessibility.config.ts  playwright.config.ts  playwright.webgpu.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-image.yml  deploy.yml  release.yml  verify.yml  webgpu-canary.yml
containers/: BUILD.bazel
containers/scripts/: load_image.sh  push_image.sh  run_dev.sh
futhark/: BUILD.bazel  Makefile  esdt.fut  esdt.mjs  pipeline-demo.html  pipeline.fut  pipeline.mjs  test.html  wcag  wcag.fut
k8s/: deployment.yaml  dns.yaml  ingress.yaml  namespace.yaml  service.yaml
nix/: BUILD.bazel  nixpkgs.nix
scripts/: bazel-dev.sh  container-entrypoint.sh  pixelwise-test.sh
server/vite_plugin/: skeleton-color-utilities.ts
src/: BUILD.bazel  app.css  hooks.server.ts
src/lib/: BUILD.bazel
src/lib/capture/: BufferRing.ts  FrameLifetimeManager.ts  GlyphFrameSynchronizer.ts  ScreenCaptureSource.ts  WebGPUVideoCapture.ts  index.ts
src/lib/components/: AccessibilityMonitor.svelte  MobileWarning.svelte  OnboardingModal.svelte  PaperViewer.svelte  WebGPUInstructions.svelte  pixelwise-text.css
src/lib/components/demo-layout/: DemoHeader.svelte  DemoSidebar.svelte
src/lib/components/esdt-demos/: ContrastAnalysisWidget.svelte  GradientDirectionVisualizer.svelte  PerformanceMetrics.svelte  ProcessingMetrics.svelte  WCAGBadge.svelte  WcagComplianceHeatmap.svelte
src/lib/components/layout/: MdsvexLayout.svelte
src/lib/composables/: useContrastEnhancer.svelte.ts  useLifecycle.svelte.ts  useWebGPUStatus.svelte.ts
src/lib/core/: ComputeDispatcher.ts  OverlayCompositor.ts  ViewportCapture.ts  WebGPUOverlayCompositor.ts  index.ts
src/lib/futhark/: esdt.class.js  esdt.mjs  esdt.wasm  index.ts
src/lib/futhark-webgpu/: index.ts  pipeline-webgpu.js  pipeline-webgpu.json  pipeline-webgpu.wasm  pipeline-webgpu.wrapper.js
src/lib/pixelwise/: A11yRemediationBridge.ts  BackgroundCapture.ts  ColorNormalizer.ts  ComplianceMetrics.ts  CoordinateTransformer.ts  DeltaDiff.ts  FontMetricsCache.ts  GlyphExtractor.ts  GlyphPixelBuffer.ts  PixelSampler.ts  PixelwiseAnimationLoop.ts  StackingContextResolver.ts  ViewportProcessor.ts  browserSupport.ts  featureDetection.ts  types.ts
src/lib/pixelwise/shaders/: esdt-background-sample.wgsl  esdt-contrast-analysis.wgsl  esdt-grayscale-gradient.wgsl  esdt-y-pass.wgsl  overlay-blend.wgsl  video-capture-esdt-fallback.wgsl  video-capture-esdt.wgsl
src/lib/pixelwise/shaders/archived/: README.md  compositor.frag  compositor.vert  esdt-color-adjust.wgsl  esdt-extract-pixels.wgsl  esdt-x-pass.wgsl
src/lib/stores/: pixelwiseStore.svelte.ts
src/lib/utils/: colorConversion.ts  consentStorage.ts
src/lib/workers/: text-manipulation.types.ts  text-manipulation.worker.ts
src/routes/: +layout.js  +layout.svelte  +page.svelte
src/routes/demo/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/demo/before-after/: +page.svelte
src/routes/demo/compositor/: +page.svelte
src/routes/demo/contrast-analysis/: +page.svelte
src/routes/demo/gradient-direction/: +page.svelte
src/routes/demo/performance/: +page.svelte
src/vite-plugin-types/: pixelwise-pulsing.d.ts  pixelwise-pulsing.js
tests/: BUILD.bazel  GlyphPixelBuffer.test.ts  PixelSampler.test.ts  README.md  ViewportProcessor.test.ts  arbitraries.ts  benchmark.test.ts  compute-dispatcher.test.ts  esdt-pipeline.test.ts  esdt-shader-integration.spec.ts  esdt-wcag-compliance.test.ts  featureDetection.test.ts  frame-consistency.test.ts  futhark-webgpu-benchmark.test.ts  futhark-webgpu-equivalence.test.ts  futhark-webgpu-loading.test.ts  futhark-webgpu-visualizations.test.ts  helpers.ts  hydration.spec.ts  metrics.ts  onboarding-wizard.test.ts  rendering.test.ts  setup.ts  simd-contrast-pbt.test.ts  spatial-invariants.test.ts  vectors-integration.test.ts  wasm-integration.test.ts  wcag-contrast-pbt.test.ts  wcag-invariants.test.ts.skip  webgl-context.spec.ts  webgpu-alignment.test.ts  webgpu-canary.spec.ts  webgpu-gate.test.ts  webgpu-overlay-compositor.test.ts  wgsl-shader-unit.test.ts
tests/_archived/: CSSColorCorrector.clearAll.test.ts  CSSColorCorrector.test.ts  CSSCustomPropertyApplier.test.ts  composable-chain-invariants.test.ts  frame-cache.test.ts  kernel-variations.test.ts  pixel-sampler-invariants.test.ts  sparse-sampling-invariants.test.ts  wasm-shader-integration.spec.ts
tests/capture/: BufferRing.test.ts  GlyphFrameSynchronizer.test.ts  ScreenCaptureSource.test.ts  WebGPUVideoCapture.test.ts
tests/capture/pbt/: BufferRing.pbt.test.ts  CoordinateTransformer.pbt.test.ts  FrameLifetimeManager.pbt.test.ts  GlyphFrameSynchronizer.pbt.test.ts  ScreenCaptureSource.pbt.test.ts
tests/esdt-demos/: ContrastAnalysisWidget.test.ts  GradientDirectionVisualizer.test.ts  demo-pages.spec.ts  worker-integration.test.ts
tests/glyph-positioning/: CoordinateTransformer.test.ts  FontMetricsCache.test.ts  GlyphExtractor.test.ts  StackingContextResolver.test.ts
tests/mocks/: env-static-private.ts  env-static-public.ts
tests/theorem-verification/: edge-weight.test.ts  edt.test.ts  esdt-passes.test.ts  gray-offset.test.ts  offset-vectors.test.ts  wcag-linearization.test.ts
